Min-height to make sure it's not too small

--- a/src/pages/notifications-menu.css
+++ b/src/pages/notifications-menu.css
@@ -34,6 +34,9 @@
   padding: 0;
   font-size: 1.2em;
 }
+.notifications-menu main {
+  min-height: 100%;
+}
 .notifications-menu .notification {
   animation: appear-smooth 0.3s ease-out 0.1s both;
 }
